fixed spacing and colors

--- a/vscode_extension/script/sidebar-webview.css
+++ b/vscode_extension/script/sidebar-webview.css
@@ -26,6 +26,7 @@ body {
 
 #parse-button {
 	height: 50%;
+	background-color: transparent;
 }
 
 #parse-button:hover #parse-tooltip {
@@ -50,10 +51,18 @@ body {
 
 #run-button {
 	width: 3em;
+
 }
 
 #run-button:hover #tooltip {
 	visibility: visible;
+}
+
+#run-btn-wrapper {
+	display:flex;
+	column-gap: 5%;
+	padding-left: 1em;
+	padding-top: 0.5em;
 }
 
 #tooltip {
@@ -61,9 +70,9 @@ body {
 	width: 120px;
 	background-color: transparent;
 	color: #fff;
-	text-align: center;
+	text-align: left;
 	border-radius: 6px;
-	padding: 5px 0;
+	padding-left: 1em;
   
 	/* Position the tooltip */
 	position: absolute;
@@ -74,12 +83,12 @@ body {
 
 #parse-tooltip {
 	visibility: hidden;
-	width: 120px;
+	width: fit-content;
 	background-color: transparent;
 	color: #fff;
-	text-align: center;
+	text-align: left;
 	border-radius: 6px;
-	padding: 5px 0;
+	padding-left: 1em;
   
 	/* Position the tooltip */
 	position: absolute;
